		integer binds, rather than SQL_C_LONG/SQL_INTEGER
	fixed uninitialized null/blob flags in sqlrclientprotocol::returnRow()
	various variables are now properly typed (SQLLEN vs. SQLINTEGER) in the
		odbc connection module
	added "divider on/off" command to sqlrsh
	fixed several cases where microseconds were represented by an int16_t
		made them all int32_t's

1.1.0 - updated to use charstring asprintf analogs
	fixed uninitialized sendcolumninfo on server-side
	fixed a bug in freetds connection that caused error messages to be
		concatenated over and over
	added missing quote method to pdo driver
	fixed a subtle login/ping bug in the router
	fixed a memory leak in the sqlrclient protocol module
	postgresql connection uses async functions and fetches one row at a
		time now, if available
	mysql connection checks for valid stmt before resetting it now
	removed various unused methods associated with getting a unique
		unix socket
	added server api methods to get column flags by numeric type
	added rudiments version requirement to configure script
	added inTransaction() method to sqlrservercontroller to return
		true/false indicating whether we're in a transaction or not
	pushed processing of various connect-string parameters up to
		sqlrserverconnection class
	renamed maxselectlist and maxitembuffersize to maxcolumncount and
		maxfieldlength (old parameter names still work though)
	fetch-at-once, max column count, and max field length are now available
		via server API
	updated sqlrservercursor to provide preallocated and reused field
		pointer buffers to protocol modules
	refactored fetchRow/getField and pushed reformatRow/Field up into
		sqlrservercontroller
	fixed systemd/sysvinit detection on ubuntu
	added clientinfolist router module
	switched from Semantic Versioning to "intuitive versioning":
		Given a version number MAJOR.MINOR.PATCH, increment the:
		1. MAJOR when you make very significant changes
		   and set MINOR and PATCH to 0